welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: not found: value Motif
  Motif()
  ^